@@ -2,10 +2,14 @@
 changed Boundary and CombinedBoundary parser functions to not return signed
 entity tags anymore (use new OrientedBoundary and OrientedCombinedBoudnary to
 get the old behavior); changed default value of oriented argument to false in
-model/getBoundary API; improved Constant and Restrict mesh size fields; bug
-fixes.
+model/getBoundary API; new fltk/run() option to automatically load/save options
+between runs; improved Constant and Restrict mesh size fields; reverted curve
+drawing to use fixed number of subdivisions; bug fixes.
 
 * New API functions: model/isEntityOrphan, occ/getClosestEntities
+
+* Incompatible API changes: new arguments to algorithm/tetrahedralize and
+  fltk/run
 
 4.14.1 (September 2, 2025): further improvement of return value of boolean
 operations; bug fixes.
